--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fortawesome/react-fontawesome": "^0.1.19",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.24.0",
+    "bootstrap": "^5.2.1",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
