--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
