--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.2.1",
+    "express": "^4.18.2",
+    "laravel-echo": "^1.14.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -20,8 +22,10 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.4",
     "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.0"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
