--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.2.1",
     "express": "^4.18.2",
+    "howler": "^2.2.3",
     "laravel-echo": "^1.14.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
