--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "reactstrap": "^9.1.4",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.2",
-    "socket.io-client": "^4.5.0"
+    "socket.io-client": "^4.5.0",
+    "sweetalert2": "^11.6.16"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
